# wg_monitor

./: AGENTS.md  LICENSE  README.md  README_zh.md  install.sh  pyproject.toml  uninstall.sh  wg-monitor.default  wg-monitor.logrotate  wg-monitor.service  wg-monitor@.service  wg_monitor.py
.github/workflows/: ci.yml
tests/: test_monitor.py  test_parser.py
